force-app/main/default/objects/SportTeam__c/SportTeam__c.object-meta.xml
<CustomObject>
    <label>Sport Team</label>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sport Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>