force-app/main/default/objects/SportTeam__c/fields/Team_Coach__c.field-meta.xml
<CustomField>
    <fullName>Team_Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head Coach</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sport Teams</relationshipLabel>
    <relationshipName>Sport_Teams_New</relationshipName>
    <type>Lookup</type>
</CustomField>